--- a/index.html
+++ b/index.html
@@ -14,25 +14,26 @@
 </head>
 
 <body>
-    <div class="card justify-content-center text-center">
+    <div class="card justify-content-center text-center" id="header">
+        <div id="button-corral" class="card flex-wrap justify-content-around">
 
-        <h4 class="card-title">Git Giphy With It</h4>
-        <button type="button" name="" id="" class="btn btn-primary btn-lg btn-block">Press start to begin</button>
+            <h4 class="start-title">Git Giphy With It</h4>
+            <button type="button" name="" id="start-button" class="btn btn-primary btn-lg btn-block">Press start to
+                begin</button>
+        </div>
+
+        
+
     </div>
     </div>
-    <div class="d-flex container flex-wrap justify-content-between">
+    <div id="gif-corral" class="d-flex container flex-wrap justify-content-around">
 
-        <div class="gif-frame">1</div>
-        <div class="gif-frame">2</div>
-        <div class="gif-frame">3</div>
-        <div class="gif-frame">4</div>
-        <div class="gif-frame">5</div>
-        <div class="gif-frame">6</div>
-        <div class="gif-frame">7</div>
-        <div class="gif-frame">8</div>
-        <div class="gif-frame">9</div>
-        <div class="gif-frame">10</div>
-        <div class="footer"></div>
+
+
+        <div id="input" class="footer text-center">
+
+
+        </div>
 
     </div>
 
@@ -50,7 +51,7 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
